fix client proj

--- a/src/Chatty.Client/Chatty.Client.vcxproj.filters
+++ b/src/Chatty.Client/Chatty.Client.vcxproj.filters
@@ -15,6 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Client.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="Client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
