--- a/src/Chatty.Console/Chatty.Console.vcxproj
+++ b/src/Chatty.Console/Chatty.Console.vcxproj
@@ -18,29 +18,30 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-      <ClCompile Include="main.cpp"/>
-      <ClCompile Include="TcpService.cpp"/>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Chatty.Server\Chatty.Server.vcxproj">
-      <Project>{de666c10-d240-4693-957c-c6bd48bae52e}</Project>
-      <Name>Chatty.Server</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-      <ClInclude Include="TcpService.h"/>
-  </ItemGroup>
-  <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
-    <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9c0ce8a7-b0d0-40a0-9793-4c1106a2edff}</ProjectGuid>
-    <RootNamespace>ChattyConsole</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-  </PropertyGroup>
+    <ItemGroup>
+        <ClCompile Include="main.cpp"/>
+        <ClCompile Include="TcpService.cpp"/>
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Chatty.Server\Chatty.Server.vcxproj">
+            <Project>{de666c10-d240-4693-957c-c6bd48bae52e}</Project>
+            <Name>Chatty.Server</Name>
+        </ProjectReference>
+    </ItemGroup>
+    <ItemGroup>
+        <ClInclude Include="Helper.h"/>
+        <ClInclude Include="TcpService.h"/>
+    </ItemGroup>
+    <PropertyGroup Label="Globals">
+        <VCProjectVersion>16.0</VCProjectVersion>
+        <Keyword>Win32Proj</Keyword>
+        <ProjectGuid>{9c0ce8a7-b0d0-40a0-9793-4c1106a2edff}</ProjectGuid>
+        <RootNamespace>ChattyConsole</RootNamespace>
+        <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    </PropertyGroup>
     <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
+        <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
